--- a/test2.html
+++ b/test2.html
@@ -20,6 +20,7 @@
             <input class="passInput2" type="text" id="password2" name="password2" value="12345"><br>
             <button type="button" onclick="checkUser()">Submit</button><br>
             <div id="ahh"></div>
+            <div class="test">ignore this</div>
         </div>
 
 
